Loading expert predictions

--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -171,43 +171,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from utils.helper import get_encoding_data\n",
-    "# from encoding_models import EncoderFitter\n",
-    "# import shutil\n",
+    "from utils.helper import get_encoding_data\n",
+    "from encoding_models import EncoderFitter\n",
+    "import shutil\n",
     "\n",
-    "# config_keys = ['dropout', 'hidden_act', 'learning_rate', 'num_hidden_layers',\n",
-    "#                'num_hidden_units', 'optimizer_class', 'w_decay']\n",
+    "config_keys = ['dropout', 'hidden_act', 'learning_rate', 'num_hidden_layers',\n",
+    "               'num_hidden_units', 'optimizer_class', 'w_decay']\n",
     "\n",
-    "# for e_id in meta_log.eval_ids:\n",
-    "#     best_id = np.argmax(meta_log[e_id].stats.best_bo_score.mean)\n",
-    "#     best_config = {}\n",
-    "#     for c_key in config_keys:\n",
-    "#         if type(meta_log[e_id].stats[c_key]) == list:\n",
-    "#             config_value = meta_log[e_id].stats[c_key][0][best_id].decode()\n",
-    "#         else:\n",
-    "#             config_value = meta_log[e_id].stats[c_key].mean[best_id]\n",
-    "#         best_config[c_key] = config_value\n",
-    "#     best_layer = meta_log[e_id].stats['layer_id'][0][best_id].decode()\n",
-    "#     #print(model_config, layer_id)\n",
+    "for e_id in meta_log.eval_ids:\n",
+    "    best_id = np.argmax(meta_log[e_id].stats.best_bo_score.mean)\n",
+    "    best_config = {}\n",
+    "    for c_key in config_keys:\n",
+    "        if type(meta_log[e_id].stats[c_key]) == list:\n",
+    "            config_value = meta_log[e_id].stats[c_key][0][best_id].decode()\n",
+    "        else:\n",
+    "            config_value = meta_log[e_id].stats[c_key].mean[best_id]\n",
+    "        best_config[c_key] = config_value\n",
+    "    best_layer = meta_log[e_id].stats['layer_id'][0][best_id].decode()\n",
+    "    #print(model_config, layer_id)\n",
     "    \n",
-    "#     subject_id = hyper_log[hyper_log.run_id == e_id].subject_id.iloc[0]\n",
-    "#     roi_type = hyper_log[hyper_log.run_id == e_id].roi_type.iloc[0]\n",
+    "    subject_id = hyper_log[hyper_log.run_id == e_id].subject_id.iloc[0]\n",
+    "    roi_type = hyper_log[hyper_log.run_id == e_id].roi_type.iloc[0]\n",
     "    \n",
-    "#     X, y, X_test = get_encoding_data(fmri_dir=\"../data/participants_data_v2021\",\n",
-    "#                                      activations_dir='../data/features/alexnet/pca_100',\n",
-    "#                                      layer_id=best_layer,\n",
-    "#                                      subject_id=subject_id,\n",
-    "#                                      roi_type=roi_type)\n",
-    "#     fitter = EncoderFitter(\"mlp_network\", 10,\n",
-    "#                            X, y, X_test)\n",
-    "#     model_params, y_pred = fitter.predict_on_test(best_config)\n",
-    "#     dirpath = \"../\" + meta_log[e_id].meta.experiment_dir + \"extra/\"\n",
-    "#     save_fname = dirpath + subject_id + \"_\" + roi_type + \"_\" + best_layer + \"_test.npy\"\n",
-    "#     if os.path.exists(dirpath) and os.path.isdir(dirpath):\n",
-    "#         shutil.rmtree(dirpath)\n",
-    "#     os.makedirs(dirpath)\n",
-    "#     np.save(save_fname , y_pred)\n",
-    "#     print(e_id, save_fname)"
+    "    X, y, X_test = get_encoding_data(fmri_dir=\"../data/participants_data_v2021\",\n",
+    "                                     activations_dir='../data/features/alexnet/pca_100',\n",
+    "                                     layer_id=best_layer,\n",
+    "                                     subject_id=subject_id,\n",
+    "                                     roi_type=roi_type)\n",
+    "    fitter = EncoderFitter(\"mlp_network\", 10,\n",
+    "                           X, y, X_test)\n",
+    "    model_params, y_pred = fitter.predict_on_test(best_config)\n",
+    "    dirpath = \"../\" + meta_log[e_id].meta.experiment_dir + \"extra/\"\n",
+    "    save_fname = dirpath + subject_id + \"_\" + roi_type + \"_\" + best_layer + \"_test.npy\"\n",
+    "    if os.path.exists(dirpath) and os.path.isdir(dirpath):\n",
+    "        shutil.rmtree(dirpath)\n",
+    "    os.makedirs(dirpath)\n",
+    "    np.save(save_fname , y_pred)\n",
+    "    print(e_id, save_fname)"
    ]
   },
   {
