--- a/notebooks/whole_brain.ipynb
+++ b/notebooks/whole_brain.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,54 +39,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "X, y, X_test = get_expert_encoding_data(roi_paths,\n",
     "                             fmri_dir='../data/participants_data_v2021',\n",
     "                             activations_dir='../data/features/alexnet/pca_100',\n",
-    "                             layer_id='layer_1', subject_id='sub01')"
+    "                             layer_id='layer_1', subject_id='sub01')\n",
+    "\n",
+    "X_train, X_val = X[:900], X[900:]\n",
+    "y_train, y_val = y[:900], y[900:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 3959)"
+       "(0.03950439312902313, 0.2283685814371446, 0.37744550005724614)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(102, 3959)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape"
+    "from encoding_models.elastic_net import fit_elastic_net, predict_elastic_net\n",
+    "from utils.evaluate import evaluation_metrics\n",
+    "\n",
+    "model_config = {\"alpha\": 0.025, \"l1_ratio\": 0.5}\n",
+    "model_params = fit_elastic_net(model_config, X_train, y_train)\n",
+    "y_pred = predict_elastic_net(model_params, X_val)\n",
+    "# corr, mse, mae\n",
+    "evaluation_metrics(y_val, y_pred)"
    ]
   },
   {
