--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -55,7 +55,10 @@
     "#experiment_dir = \"../data/experiments/roi/elastic_vone_resnet50_bo_50\"\n",
     "#experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_bo_30\"\n",
     "#experiment_dir = \"../data/experiments/roi/elastic_vone_resnet50_at_bo_50\"\n",
-    "experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_at_bo_30\"\n",
+    "#experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_at_bo_30\"\n",
+    "\n",
+    "#experiment_dir = \"../data/experiments/roi/elastic_vone_cornets_bo_50\"\n",
+    "experiment_dir = \"../data/experiments/wb/elastic_vone_cornets_bo_30\"\n",
     "\n",
     "meta_log, hyper_log = load_result_logs(experiment_dir)"
    ]
@@ -68,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "'experiments/wb/elastic_vone_resnet50_at_bo_30/21-06-13_b_1_eval_0/'"
+       "'experiments/wb/elastic_vone_cornets_bo_30/21-06-14_b_1_eval_0/'"
       ]
      },
      "execution_count": 10,
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -144,12 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
-    "model_name = \"2021-06-14_elastic_vone_resnet50_at_bo_50\"\n",
+    "model_name = \"2021-06-15_elastic_vone_cornets_bo_50\"\n",
     "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
@@ -167,9 +170,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'dropout'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-94a427d9e3a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mbest_config\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mc_key\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconfig_keys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeta_log\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc_key\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0mconfig_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmeta_log\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc_key\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbest_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/ma-vision/lib/python3.6/site-packages/dotmap/__init__.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, k)\u001b[0m\n\u001b[1;32m     91\u001b[0m             \u001b[0;31m# automatically extend to new DotMap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'dropout'"
+     ]
+    }
+   ],
    "source": [
     "from utils.helper import get_encoding_data\n",
     "from encoding_models import EncoderFitter\n",
@@ -219,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,27 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DotMap(V1=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), V2=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V3=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V4=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), LOC=DotMap(path='../data/experiments/mlp_vgg_bo_30', model='mlp_network'), EBA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='elastic_net'), FFA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='elastic_net'), STS=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='elastic_net'), PPA=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), _ipython_display_=DotMap(), _repr_mimebundle_=DotMap())"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "roi_paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,25 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOC\n",
-      "FFA\n",
-      "STS\n",
-      "EBA\n",
-      "PPA\n",
-      "V1\n",
-      "V2\n",
-      "V3\n",
-      "V4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = {}\n",
     "for ROI in ROIs:\n",
