Add Partial LS Encoding

--- a/notebooks/model_playground.ipynb
+++ b/notebooks/model_playground.ipynb
@@ -28,23 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 232)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X, y, X_test = get_encoding_data(fmri_dir=\"../data/participants_data_v2021\",\n",
-    "                                 activations_dir='../data/features/alexnet/pca_100',\n",
+    "                                 activations_dir='../data/features/alexnet/pca_250',\n",
     "                                 layer_id=\"layer_1\",\n",
     "                                 subject_id=\"sub01\",\n",
     "                                 roi_type=\"V1\")\n",
@@ -56,15 +45,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Teapot (Evolutionary Algorithm) - No BO Needed!"
+    "# Partial Least Squares"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.16820513659038977, 0.2493464831897412, 0.3958016988315125)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from encoding_models.partial_ls import fit_partial_ls, predict_partial_ls\n",
+    "model_config = {\"n_components\": 10}\n",
+    "model_params = fit_partial_ls(model_config, X_train, y_train)\n",
+    "y_pred = predict_partial_ls(model_params, X_val)\n",
+    "# corr, mse, mae\n",
+    "evaluation_metrics(y_val, y_pred)"
+   ]
   },
   {
    "cell_type": "markdown",
