Refactor feature compression

--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,16 +244,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DotMap(V1=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), V2=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V3=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V4=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), LOC=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), EBA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), FFA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), STS=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), PPA=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), _ipython_display_=DotMap(), _repr_mimebundle_=DotMap())"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "roi_paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,9 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOC\n",
+      "FFA\n",
+      "STS\n",
+      "EBA\n",
+      "PPA\n",
+      "V1\n",
+      "V2\n",
+      "V3\n",
+      "V4\n"
+     ]
+    }
+   ],
    "source": [
     "results = {}\n",
     "for ROI in ROIs:\n",
@@ -296,19 +323,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
+    "track = \"mini_track\"\n",
     "model_name = \"2021-06-15_combined\"\n",
-    "sub_dir = f\"../data/submissions/{model_name}/mini-track/\"\n",
+    "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
     "    \n",
     "save_dict(results, sub_dir + track + \".pkl\")\n",
     "zip(sub_dir, sub_dir + track + \".zip\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
