--- a/notebooks/dim_reduction.ipynb
+++ b/notebooks/dim_reduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,33 +143,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# UMAP Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.751922  ,  4.877557  ],\n",
+       "       [ 0.97960323,  3.285989  ],\n",
+       "       [ 2.4613802 ,  4.7664437 ],\n",
+       "       ...,\n",
+       "       [-1.0208783 ,  4.5721297 ],\n",
+       "       [ 0.51256174,  4.267113  ],\n",
+       "       [-1.2630869 ,  6.349248  ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import umap\n",
+    "\n",
+    "n_neighbors=15\n",
+    "min_dist=0.1\n",
+    "n_components=2\n",
+    "metric='euclidean'\n",
+    "dim_red = umap.UMAP(\n",
+    "    n_neighbors=n_neighbors,\n",
+    "    min_dist=min_dist,\n",
+    "    n_components=n_components,\n",
+    "    metric=metric\n",
+    ")\n",
+    "\n",
+    "trafo = dim_red.fit(x_train)\n",
+    "trafo.transform(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_umap(n_neighbors=15, min_dist=0.1, n_components=2, metric='euclidean', title=''):\n",
+    "    fit = umap.UMAP(\n",
+    "        n_neighbors=n_neighbors,\n",
+    "        min_dist=min_dist,\n",
+    "        n_components=n_components,\n",
+    "        metric=metric\n",
+    "    )\n",
+    "    u = fit.fit_transform(data);\n",
+    "    fig = plt.figure()\n",
+    "    if n_components == 1:\n",
+    "        ax = fig.add_subplot(111)\n",
+    "        ax.scatter(u[:,0], range(len(u)), c=data)\n",
+    "    if n_components == 2:\n",
+    "        ax = fig.add_subplot(111)\n",
+    "        ax.scatter(u[:,0], u[:,1], c=data)\n",
+    "    if n_components == 3:\n",
+    "        ax = fig.add_subplot(111, projection='3d')\n",
+    "        ax.scatter(u[:,0], u[:,1], u[:,2], c=data, s=100)\n",
+    "    plt.title(title, fontsize=18)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Explore Different Dim Reduction Techniques"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rtl/anaconda2/envs/ma-vision/lib/python3.6/site-packages/sklearn/utils/validation.py:72: FutureWarning: Pass n_neighbors=25, n_components=100 as keyword args. From version 1.0 (renaming of 0.25) passing these as positional arguments will result in an error\n",
-      "  \"will result in an error\", FutureWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 100)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_methods = ['standard', 'ltsa', 'hessian', 'modified']\n",
     "n_components = 100\n",
@@ -185,41 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.500718212049474"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "method.reconstruction_error_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'TSNE' object has no attribute 'transform'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-d79f0e896943>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m                        method='exact')\n\u001b[1;32m      4\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmethod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'TSNE' object has no attribute 'transform'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "method = manifold.TSNE(n_components=100, init='pca',\n",
     "                       random_state=0, perplexity=100,\n",
