Small changes compression

--- a/notebooks/dim_reduction.ipynb
+++ b/notebooks/dim_reduction.ipynb
@@ -56,6 +56,12 @@
     "                 base_path + \"500_pca_variance.npy\",\n",
     "                 base_path + \"1000_pca_variance.npy\"]\n",
     "\n",
+    "from mle_toolbox.utils import save_pkl_object, load_pkl_object\n",
+    "\n",
+    "save_pkl_object({\"a\": {\"b\": 1}}, \"temp.pkl\")\n",
+    "loaded = load_pkl_object(\"temp.pkl\")\n",
+    "loaded\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "for p in var_exp_paths:\n",
     "    var = np.load(p)\n",
