UMAP and AE compression

--- a/notebooks/dim_reduction.ipynb
+++ b/notebooks/dim_reduction.ipynb
@@ -172,6 +172,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Autoencoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# UMAP Algorithm"
    ]
   },
