Video labels + new configs

--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -38,43 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#experiment_dir = \"../experiments/roi/elastic_resnet50_bo_50\"\n",
-    "#experiment_dir = \"../experiments/wb/elastic_resnet50_bo_15\"\n",
-    "\n",
-    "#experiment_dir = \"../experiments/roi/elastic_efficientnet_b3_bo_50\"\n",
-    "#experiment_dir = \"../experiments/wb/elastic_efficientnet_b3_bo_50\"\n",
-    "\n",
-    "#experiment_dir = \"../experiments/roi/elastic_resnext50_32x4d_bo_50\"\n",
-    "#experiment_dir = \"../experiments/wb/elastic_resnext50_32x4d_bo_50\"\n",
-    "#experiment_dir = \"../data/experiments/roi/mlp_efficientnet_b3_bo_50\"\n",
-    "#experiment_dir = \"../data/experiments/wb/mlp_efficientnet_b3_bo_30\"\n",
-    "#experiment_dir = \"../data/experiments/roi/elastic_vone_resnet50_bo_50\"\n",
-    "#experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_bo_30\"\n",
-    "#experiment_dir = \"../data/experiments/roi/elastic_vone_resnet50_at_bo_50\"\n",
-    "#experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_at_bo_30\"\n",
-    "\n",
-    "#experiment_dir = \"../data/experiments/roi/elastic_vone_cornets_bo_50\"\n",
-    "experiment_dir = \"../data/experiments/wb/elastic_vone_cornets_bo_30\"\n",
-    "\n",
+    "experiment_dir = \"../data/experiments/roi/compression/pls_pca_50_resnet50_bo_25\"\n",
     "meta_log, hyper_log = load_result_logs(experiment_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'experiments/wb/elastic_vone_cornets_bo_30/21-06-14_b_1_eval_0/'"
+       "'experiments/roi/compression/pls_pca_50_resnet50_bo_25/21-06-22_b_1_eval_0/'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "track = \"full_track\"\n",
+    "track = \"mini_track\"\n",
     "if track == 'full_track': ROIs = ['WB']\n",
     "else: ROIs = ['LOC','FFA','STS','EBA','PPA','V1','V2','V3','V4']\n",
     "\n",
@@ -126,33 +109,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['WB'])\n",
-      "dict_keys(['sub01', 'sub02', 'sub03', 'sub04', 'sub05', 'sub06', 'sub07', 'sub08', 'sub09', 'sub10'])\n",
-      "(102, 18222)\n"
+      "dict_keys(['LOC', 'FFA', 'STS', 'EBA', 'PPA', 'V1', 'V2', 'V3', 'V4'])\n"
      ]
     }
    ],
    "source": [
     "print(results.keys())\n",
-    "print(results['WB'].keys())\n",
-    "print(results['WB']['sub01'].shape)"
+    "#print(results['WB'].keys())\n",
+    "#print(results['WB']['sub01'].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
-    "model_name = \"2021-06-15_elastic_vone_cornets_bo_50\"\n",
+    "model_name = \"2021-06-22_pls_pca_50_resnet50_bo_25\"\n",
     "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
@@ -170,22 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'dropout'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-94a427d9e3a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mbest_config\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mc_key\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconfig_keys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeta_log\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc_key\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0mconfig_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmeta_log\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc_key\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbest_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda2/envs/ma-vision/lib/python3.6/site-packages/dotmap/__init__.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, k)\u001b[0m\n\u001b[1;32m     91\u001b[0m             \u001b[0;31m# automatically extend to new DotMap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'dropout'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.helper import get_encoding_data\n",
     "from encoding_models import EncoderFitter\n",
@@ -235,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,27 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DotMap(V1=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), V2=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V3=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V4=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), LOC=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), EBA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), FFA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), STS=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='mlp_network'), PPA=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), _ipython_display_=DotMap(), _repr_mimebundle_=DotMap())"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "roi_paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,25 +235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOC\n",
-      "FFA\n",
-      "STS\n",
-      "EBA\n",
-      "PPA\n",
-      "V1\n",
-      "V2\n",
-      "V3\n",
-      "V4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = {}\n",
     "for ROI in ROIs:\n",
@@ -323,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
