Clean-up repository

--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mle_toolbox import load_result_logs\n",
-    "from mle_toolbox.utils import load_meta_log\n",
+    "from mle_logging import load_meta_log\n",
     "from utils.helper import get_best_roi_models, zip, save_dict"
    ]
   },
@@ -38,26 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_dir = \"../data/experiments/roi/more_layers/pls_pca_50_simclr_r50_mean\"\n",
+    "experiment_dir = \"../data/experiments/wb/pls_pca_75_simclr_r50_bo_20\"\n",
     "meta_log, hyper_log = load_result_logs(experiment_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'experiments/roi/more_layers/pls_pca_50_simclr_r50_mean/21-07-09_b_1_eval_0/'"
+       "'experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_0/'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,11 +75,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_0/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_0/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_1/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_1/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_2/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_2/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_3/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_3/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_4/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_4/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_5/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_5/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_6/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_6/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_7/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_7/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_8/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_8/extra'\n",
+      "../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_9/extra [Errno 2] No such file or directory: '../data/experiments/wb/pls_pca_75_simclr_r50_bo_20/21-08-08_b_1_eval_9/extra'\n"
+     ]
+    }
+   ],
    "source": [
-    "track = \"mini_track\"\n",
+    "track = \"full_track\"\n",
     "if track == 'full_track': ROIs = ['WB']\n",
     "else: ROIs = ['LOC','FFA','STS','EBA','PPA','V1','V2','V3','V4']\n",
     "\n",
@@ -98,18 +115,20 @@
     "        experiment_dir = meta_log[eval_id].meta.experiment_dir\n",
     "        mypath = os.path.join(\"../data/\" + experiment_dir, \"extra\")\n",
     "        try:\n",
-    "            sub_roi_layer = [f for f in os.listdir(mypath) if os.path.isfile(os.path.join(mypath, f))]\n",
-    "            ROI_result = np.load(mypath + \"/\" + sub_roi_layer[0])\n",
+    "            sub_roi_layer = [f for f in os.listdir(mypath) \n",
+    "                             if os.path.isfile(os.path.join(mypath, f))]\n",
+    "            sub_roi_layer = [f for f in sub_roi_layer if f.endswith(\".npy\")]\n",
+    "            ROI_result = np.load(mypath + \"/\" + sub_roi_layer[0], allow_pickle=True)\n",
     "            ROI_results[sub] = ROI_result\n",
-    "        except:\n",
-    "            print(mypath)\n",
+    "        except Exception as e:\n",
+    "            print(mypath, e)\n",
     "            continue\n",
     "    results[ROI] = ROI_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -128,12 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
-    "model_name = \"2021-07-10_pls_pca_50_simclr_r50_2_layers_mean\"\n",
+    "model_name = \"2021-08-10_pls_pca_75_simclr_r50_mean\"\n",
     "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
@@ -289,9 +308,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ma-vision)",
+   "display_name": "mle-toolbox",
    "language": "python",
-   "name": "ma-vision"
+   "name": "mle-toolbox"
   },
   "language_info": {
    "codemirror_mode": {
@@ -303,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
